Changes in 0.43
* impute_L2H was missing mean/mode imputation for CSV input

Changes in 0.42
* new option "model.fit" in gbs function 
* check_ploidy accepts VCF input

Changes in 0.41
* Generalized data input for madc

Changes in 0.40
* OFP20 option in madc

Changes in 0.39
* Changed impute_PO to impute_LA to allow for other methods eventually (MAPpoly)

Changes in 0.38
* Added chunk.size option to gbs
* exception handling in impute_L2H

Changes in 0.37
* Vignette 3 

Changes in 0.36
* PolyOrigin option moved to impute_PO
* GT2DS has multicore option
* internal changes for impute_L2H

Changes in 0.34
* GT2DS function has diploidize option
* impute_L2H has PolyOrigin ("PO") option
* madc function
* vcf2csv function

Changes in 0.33
* updates to gbs function
* fr2vcf renamed to array2vcf, now with options for both long and wide format
* created impute_L2H function
* update_alias removes leading zeros in progeny id

Changes in 0.32
* handling of missing AD in gbs

Changes in 0.31
* fr2vcf function

Changes in 0.30
* minor bug in impute

Changes in 0.29
* modified dart_tag to become dart2vcf
* new functions gbs, impute, write_vcf

Changes in 0.28
* new function array2VCF for storing SNP array data in VCF

Changes in 0.27
* dart_tag function has option to output B allele dosage
* update_alias can be used to update file

Changes in 0.26
* Added dart_tag function
* updated potato_V3array_map.csv with REF column for dart_tag
* fixed readXY bug due to changes in tidyr
* fixed slight bug in merge_impute

Changes in 0.25
* Moved functions for stage-wise analysis to R package StageWise

Changes in 0.24
* Fixed naming conflict in Stage2

Changes in 0.23
* Changes to multi-trait functionality

Changes in 0.22
* Completed multi-trait functionality for Stage2 and predict_MME

Changes in 0.21
* Changed name of argument in predict_MME to mask
* Conditioning of kernel matrices in Stage2

Changes in 0.20
* Changes in Stage2 

Changes in 0.19